# dev-agent

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  action.yml  agent.config.yaml  agent_loop.py  dev-agent.yaml  dev_agent.py  entrypoint.sh  fake_dev_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_prompt_context_backup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci.yml.new  demo.yml
agent_lib/: __init__.py  config_schema.py  llm_client.py  llm_patch_generator.py  message.py  metrics.py  prompt_templates.py  test_runner.py
docs/: AGENT-ARCHITECTURE.md  PROJECT-OUTLINE.md  PROMPT-GUIDELINES.md
supervisor/: __init__.py  __main__.py  supervisor.py
tests/: __init__.py  test_ast_validation.py  test_auto_pr.py  test_autogen_loop.py  test_config_agents.py  test_dev_agent.py  test_discovery_errors.py  test_lint_format.py  test_llm_patch_generator.py  test_metrics.py  test_metrics_integration.py  test_multiple_backends.py  test_prompt_context.py  test_prompt_templates.py  test_sanity.py  test_supervisor_approval.py  test_supervisor_cli.py  test_supervisor_loop.py  test_supervisor_retry.py  test_test_runner.py
